--- a/css/style.css
+++ b/css/style.css
@@ -250,10 +250,11 @@ border-right: 1px solid #ccc;
   margin: 30px 50px;
 }
 .prog-pratsent{
-  width: 80px;
-  height: 80px;
+  width: 50px;
+  height: 50px;
   border-radius: 50%;
   background-color: red;
+  color: white;
 }
 .pratsent{
   margin: 22px;
@@ -306,4 +307,21 @@ border-right: 1px solid #ccc;
 }
 .coli_wiz{
   min-height: 1300px;
+}
+/* ehercise */
+.checkbg{
+  background-color: #178FC2;
+  color: white;
+  border-radius: 50%;
+  padding: 5px;
+  font-size: 10px;
+}
+.starfont{
+  font-size: 13px;
+}
+.lesson-inactive .checkbg{
+  background-color: #ccc;
+}
+.lesson-inactive .course-stars{
+  color: #ccc;
 }
