--- a/css/style.css
+++ b/css/style.css
@@ -2,9 +2,6 @@
 width: 300px;
 height: 200px;
 }
-body{
-  background-color: ;
-}
 .sign-in-button{
   margin-left: 30px;
   background-color: transparent;
@@ -30,14 +27,12 @@ body{
   margin-left: 14px;
   color: #ccc;
 }
-}
 .navbar *{
   font-weight: 500;
 }
 .navbar{
   padding-top: 0;
   padding-bottom: 0;
-}
 }
 .navbar .btn {
   padding-left: 25px;
@@ -96,9 +91,6 @@ body{
   background-color: #90B94D;
   content: " ";
   display: block;
-}
-.imgleft{
-  margin: ;
 }
 .coueses{
   margin: 60px 0px 45px 0px;
@@ -324,4 +316,19 @@ border-right: 1px solid #ccc;
 }
 .lesson-inactive .course-stars{
   color: #ccc;
+}
+.section-header {
+  height: 80px;
+  border-bottom: solid 1px #ccc;
+  background-color: #fff;
+}
+.course-menu .accordion-item{
+  border-radius: 0;
+  border: 0;
+  border-bottom: solid 1px #ccc;
+}
+.close-cmenu{
+  margin-top: 3px;
+  margin-right: -50px;
+  text-align: right;
 }
