--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,8 @@ height: 200px;
 .nav-row
 {
   width: 100%;
+  margin-right: -12px;
+  margin-left: -12px;
 }
 .sign-in-button{
   margin-left: 30px;
@@ -27,7 +29,7 @@ height: 200px;
 }
 .topsearch{
   position: absolute;
-  top: 21px;
+  /*top: 21px;*/
   margin-left: 14px;
   color: black;
 }
@@ -42,8 +44,8 @@ height: 200px;
   padding-bottom: 0;
 }
 .navbar .btn {
-  padding-left: 25px;
-  padding-right: 25px;
+  /*padding-left: 25px;*/
+  /*padding-right: 25px;*/
 }
 .makeyour{
   font-size: 70px;
@@ -408,4 +410,32 @@ color: white;
   color: #547ac6;
   background-color: transparent;
   border-color: transparent;
+}
+.custom-nav
+{
+  padding:5px 0;
+}
+.inline-nav
+{
+  margin: 0;
+  padding: 0;
+  width: auto;
+}
+.custom-nav .nav a
+{
+  color: #000;
+}
+.custom-nav .nav a:hover, .custom-nav .nav a:focus
+{
+  color: #6d6d6d;
+}
+.hidden-lg
+{
+  display: none;
+}
+.hidden-search
+{
+  margin-top: 8px;
+  padding: 8px 12px;
+  border-top: solid 1px #ccc;
 }
